Fixed alignment for inline objects

--- a/site/post.css
+++ b/site/post.css
@@ -118,7 +118,8 @@ h3.post-title, .comments h4 {
 
 /* Inline images
 ----------------------------------------------- */
-.post-body p img, .post-body td img {
+.post-body p img, .post-body td img,
+.post-body p object, .post-body td object  {
   float: none;
   vertical-align: middle;
 }
